added new dataset from 11/30

--- a/Craigslist scraping.ipynb
+++ b/Craigslist scraping.ipynb
@@ -341,6 +341,29 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "d94d1030-ff01-4ff4-9102-bacb20960eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rescrape():\n",
+    "    \"\"\"\n",
+    "    Scrapped the pages that were left off due to an interruption of the scrape_pages\n",
+    "    function that left a discrepency between the number of scrapped pages and actual\n",
+    "    entries in craigslist.csv\n",
+    "    \"\"\"\n",
+    "    with open('scrapped.csv', mode='r') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        next(reader, None)  # skip the headers\n",
+    "        links = set([link[0] for link in reader])\n",
+    "    df = pd.read_csv('craigslist.csv')\n",
+    "    scrapped_listings = set(df.loc[:, 'url'].tolist())\n",
+    "    to_download = links.difference(scrapped_listings) \n",
+    "    scrape_webpages(to_download)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "900cc964-bf22-46fa-983b-8e78cdb139b6",
    "metadata": {},
    "outputs": [],
@@ -350,8 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8d0e86f4-ad3d-4791-9db0-db9fc7fb4a7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rescrape()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7430e42b-97b3-49e8-a54a-52b0e25376a3",
    "metadata": {},
    "outputs": [],
    "source": []
